# Plantix

./: .env.example  .gitignore  README.md  pyproject.toml  test_plantix.py
src/agentic_ai/: crew.py  main.py
src/agentic_ai/config/: agents.yaml  tasks.yaml
src/agentic_ai/tools/: __init__.py  custom_tool.py
