[project]
name = "agentic_ai"
version = "0.1.0"
description = "Plantix - AI Farming Assistant"
authors = [{ name = "TejasS1233", email = "" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.1.0"
]

[project.scripts]
agentic_ai = "agentic_ai.main:run"
run_crew = "agentic_ai.main:run"
train = "agentic_ai.main:train"
replay = "agentic_ai.main:replay"
test = "agentic_ai.main:test"
run_with_trigger = "agentic_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
